Fix footer wrap issue

--- a/src/styles/components/secondaryAction.scss
+++ b/src/styles/components/secondaryAction.scss
@@ -9,5 +9,6 @@
     font-size: 1.5em;
     font-family: 'Roboto-Bold';
     color: $primary-color;
+    white-space: nowrap;
   }
 }
