--- a/src/styles/layout/footer.scss
+++ b/src/styles/layout/footer.scss
@@ -27,6 +27,7 @@ footer ul {
   list-style-type: none;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   flex-wrap: wrap;
 }
 
