--- a/src/styles/pages/index.scss
+++ b/src/styles/pages/index.scss
@@ -22,6 +22,7 @@
     background-color: #2575fc;
     padding: 2em 4em 2em 4em;
     border-radius: 1em;
+    white-space: nowrap;
 
     * {
       vertical-align: middle;
